--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/yaserrizki/PortfolioProjects/blob/main/NashvilleHousing%20-%20Cleaning%20Data%20Project.sql" target="_blank">Nashville Housing</a></h2>
+										<h2><a href="https://github.com/yaserrizki/PortfolioProjects/blob/main/NashvilleHousing%20-%20Cleaning%20Data%20Project.sql" target="_blank">Nashville Housing Price Data Cleaning</a></h2>
 									</header>
 									<a href="https://github.com/yaserrizki/PortfolioProjects/blob/main/NashvilleHousing%20-%20Cleaning%20Data%20Project.sql" target="_blank" class="image fit"><img src="images/Proj 3.jpg" alt="" /></a>
 									<p>Cleaning the <a href="https://www.kaggle.com/datasets/tmthyjames/nashville-housing-data" target="_blank">data⇗</a> of home value for Nashville market in SQL from standardize date format, standardize Yes/No responses, populate and breaking out property address, and remove duplicates.</p>
